# matrix

./: .ARCHITECT_INSTRUCTION.md.swp  .gitignore  AGENTS.md  AGENT_ARCHITECT.md  AI_P_server3_codex.md  ARCHITECT_INSTRUCTION.md  LESSONS.md  LESSONS_ARCHIVE.md  README.md  SERVER3_ARCHIVE.md  SERVER3_ARCHIVE_LEGACY_20260228.md  SERVER3_PROGRESS.md  SERVER3_SUMMARY.md  pyproject.toml  remember.md  requirements-dev.txt
.github/workflows/: telegram-bridge-ci.yml
.state/: ha_mobile_1_before_alt_layout_20260514T0955AEST.json  ha_mobile_1_before_blank_slate_20260514T1007AEST.json  ha_mobile_1_before_full_retry_20260514T0947AEST.json  ha_sungrow_modbus_2_backup_20260514T0935AEST.json
.state/server3-review-fix-loop/: results.jsonl  state.json
docs/: code-improvement-audit.md  home-assistant-ops.md  nextcloud-ops.md  nordvpn-server3.md  server-setup.md  server3-control-plane-data.js  server3-control-plane-data.json  server3-control-plane-sketch.html  server3-control.html  server3-mental-model.md  server3-tv-desktop.md  tailscale-server3.md  telegram-architect-bridge.md  telegram-bridge-debug-checklist.md
docs/handoffs/: nanoclaw-whatsapp-server3-rollout-plan.md  (+2 more)
infra/: server3-runtime-manifest.json
ops/: chatgpt_web_bridge.py  server3_runtime_status.py  signaltube_ask.py  signaltube_lab.py  signaltube_lab_browser.sh  signaltube_publish_filegator.py
private/: README.md
src/: __init__.py
tasks/: lessons.md
tests/: test_chatgpt_web_bridge.py  test_server3_runtime_status.py  test_sync_server3_runtime_overlays.py
tmp/: recent_messages_prompt.txt
(+753 files in other folders)
