[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "server3-matrix"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=20.0",
    "requests>=2.28",
    "yt-dlp>=2023.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "telegram_bridge",
    "mavali_eth",
    "signaltube",
    "browser_brain",
    "architect_cli",
    "kids_world",
    "web3_substrate",
    "mavali_eth_cli",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.coverage.run]
source = ["src/telegram_bridge"]
branch = true

[tool.coverage.report]
fail_under = 35
show_missing = true
skip_covered = true
